--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@observablehq/runtime": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "191348882c05c051": "https://api.observablehq.com/d/191348882c05c051@206.tgz?v=3",
+    "c1100fa2f73228e7": "https://api.observablehq.com/d/c1100fa2f73228e7@419.tgz?v=3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
